# physics-rs

./: justfile
.github/workflows/: release.yaml
crate/: Cargo.toml
crate/.cargo/: config.toml
crate/shaders/basic/: basic.frag  basic.vert
crate/src/: canvas.rs  console.rs  lib.rs
crate/src/bvh/: aabb.rs  arenatree.rs  mod.rs
crate/src/controls/: keyboard.rs
crate/src/game/: core.rs  event.rs  mod.rs  store.rs  world.rs
crate/src/game/components/: geom2d.rs  mod.rs  player.rs
crate/src/game/resources/: mod.rs
crate/src/game/state/: mod.rs
crate/src/game/systems/: collisions.rs  event.rs  mod.rs  physics.rs  player_control.rs  render.rs  time.rs
crate/src/game_bevy/: core.rs  game.rs  mod.rs
crate/src/game_bevy/components/: mod.rs
crate/src/game_bevy/events/: mod.rs
crate/src/game_bevy/resources/: game_state.rs
crate/src/game_bevy/scenes/: scene1.rs
crate/src/game_bevy/systems/: event_system.rs  mod.rs  physics_system.rs  player_control_system.rs  render_system.rs
crate/src/game_specs/: core.rs  event.rs  mod.rs
crate/src/game_specs/components/: collider.rs  collision_pair.rs  mod.rs  position.rs  velocity.rs
crate/src/game_specs/controls/: keyboard.rs
crate/src/game_specs/resources/: collision_data.rs
crate/src/game_specs/state/: mod.rs
crate/src/game_specs/systems/: collisions.rs  event.rs  mod.rs  physics.rs  player_control.rs  render.rs
crate/src/geom/: convex_poly.rs  mod.rs
crate/src/graphics/: batch_poly_renderer.rs  mod.rs  shader.rs
crate/src/webgl/: core.rs  mod.rs  shader.rs
physics-rs/: Cargo.toml  package-lock.json
physics-rs/src/: lib.rs
physics-rs/src/webgl/: shader.rs
physics-web/: index.html  package.json  pnpm-lock.yaml
physics-web/lib/: main.ts
web/: package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.dev.json  tsconfig.json  tsconfig.lib.json  vite.config.ts
web/lib/: main.ts
web/src/: Demo.tsx  index.tsx
